# service-outage-orchestration-swarm

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  PRD_TRACEABILITY.md  VALIDATION.md
openclaw/: openclaw.json5.example
openclaw/workspaces/communications/: AGENTS.md
openclaw/workspaces/communications/skills/outage-mission-role/: SKILL.md
openclaw/workspaces/conductor/: AGENTS.md
openclaw/workspaces/conductor/skills/outage-mission-role/: SKILL.md
openclaw/workspaces/correlation/: AGENTS.md
openclaw/workspaces/correlation/skills/outage-mission-role/: SKILL.md
openclaw/workspaces/memory/: AGENTS.md
openclaw/workspaces/memory/skills/outage-mission-role/: SKILL.md
openclaw/workspaces/planner/: AGENTS.md
openclaw/workspaces/planner/skills/outage-mission-role/: SKILL.md
src/outage_swarm/: __init__.py  api.py  cli.py  communications.py  config.py  correlation.py  execution.py  field.py  models.py  openclaw_adapter.py  orchestrator.py  policy.py  repository.py  scenarios.py  swarm.py
src/outage_swarm/static/: app.js  index.html  styles.css
tests/: conftest.py  test_field.py  test_mission_flow.py
